--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "chalk": "^4.1.2",
     "readline-sync": "^1.4.10",
     "uuidv4": "^6.2.12"
   }
